test/compare/sources/errors/bad-for.go
// errcmp

package main

func main() {
	for i := range []int{} {
	}
}
